test_programs/compile_failure/noirc_frontend_tests_traits_warns_if_trait_is_not_in_scope_for_primitive_function_call_and_there_is_only_one_trait_method/src/main.nr

    fn main() {
        let _ = Field::foo();
    }

    mod private_mod {
        pub trait Foo {
            fn foo() -> i32;
        }

        impl Foo for Field {
            fn foo() -> i32 {
                42
            }
        }
    }
    